# ComfyUI-Spectrum-SDXL-Proper

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml
comfyui_spectrum_sdxl/: __init__.py  config.py  forecast.py  runtime.py  sdxl.py
tests/: smoke_runtime.py
