[project]
name = "comfyui-spectrum-sdxl-native"
version = "0.1.0"
description = "Native ComfyUI SDXL Spectrum forecaster node"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }

[tool.comfy]
PublisherId = "openai"
DisplayName = "ComfyUI Spectrum SDXL Native"
Icon = ""
