[project]
name = "comfyui-spectrum-sdxl-proper"
version = "0.1.3"
description = "Native ComfyUI SDXL Spectrum forecaster node with proper internal U-Net integration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }

[project.urls]
Repository = "https://github.com/xmarre/ComfyUI-Spectrum-SDXL-Proper"
Documentation = "https://github.com/xmarre/ComfyUI-Spectrum-SDXL-Proper#readme"
"Bug Tracker" = "https://github.com/xmarre/ComfyUI-Spectrum-SDXL-Proper/issues"

[tool.comfy]
PublisherId = "xmarre"
DisplayName = "ComfyUI-Spectrum-SDXL-Proper"
Icon = ""
includes = []
